--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.5.0",
     "react": "^16.2.0",
     "react-dom": "^16.12.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
     "superagent": "^5.1.3"
   },
